// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays warning for deprecated config options 1`] = `
"● Deprecation Warning:

  Option scriptPreprocessor was replaced by transform, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    \\"transform\\": {\\".*\\": \\"test\\"}
  }

  Please update your configuration.
"
`;

exports[`displays warning for unknown config options 1`] = `
"● Validation Warning:

  Unknown option \\"unkwon\\" with value {} was found. Did you mean \\"unknown\\"?
  This is probably a typing mistake. Fixing it will remove this message.
"
`;

exports[`pretty prints valid config for Array 1`] = `
"● Validation Error:

  Option \\"coverageReporters\\" must be of type:
    array
  but instead received:
    object

  Example:
  {
    \\"coverageReporters\\": [\\"json\\", \\"text\\", \\"lcov\\", \\"clover\\"]
  }
"
`;

exports[`pretty prints valid config for Boolean 1`] = `
"● Validation Error:

  Option \\"automock\\" must be of type:
    boolean
  but instead received:
    array

  Example:
  {
    \\"automock\\": false
  }
"
`;

exports[`pretty prints valid config for Function 1`] = `
"● Validation Error:

  Option \\"fn\\" must be of type:
    function
  but instead received:
    string

  Example:
  {
    \\"fn\\": (config, option, deprecatedOptions) => true
  }
"
`;

exports[`pretty prints valid config for Object 1`] = `
"● Validation Error:

  Option \\"haste\\" must be of type:
    object
  but instead received:
    number

  Example:
  {
    \\"haste\\": {\\"providesModuleNodeModules\\": [\\"react\\", \\"react-native\\"]}
  }
"
`;

exports[`pretty prints valid config for String 1`] = `
"● Validation Error:

  Option \\"preset\\" must be of type:
    string
  but instead received:
    number

  Example:
  {
    \\"preset\\": \\"react-native\\"
  }
"
`;

exports[`works with custom deprecations 1`] = `
"My Custom Deprecation Warning:

  Option scriptPreprocessor was replaced by transform, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    \\"transform\\": {\\".*\\": \\"test\\"}
  }

  Please update your configuration.

My custom comment"
`;

exports[`works with custom errors 1`] = `
"My Custom Error:

  Option \\"test\\" must be of type:
    array
  but instead received:
    string

  Example:
  {
    \\"test\\": [1, 2]
  }

My custom comment"
`;

exports[`works with custom warnings 1`] = `
"My Custom Warning:

  Unknown option \\"unknown\\" with value \\"string\\" was found.
  This is probably a typing mistake. Fixing it will remove this message.

My custom comment"
`;
